holy shit it works

--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="utf-8" />
 	<title>React Tutorial</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
 	<script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
 	<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 	<script src="https://unpkg.com/jquery@3.1.0/dist/jquery.min.js"></script>
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="https://unpkg.com/remarkable@1.7.1/dist/remarkable.min.js"></script>
 </head>
 <body>
@@ -19,21 +19,20 @@
 		getInitialState: function() {
 			return {
 				movies: []
-			}
+			};
 		},
 
-		componentDidMount: function() {
-			var th = this;
-			this.serverRequest =
-				axios.get(this.props.source)
-					 .then(function(result) {
-						th.setState({
-							movies: result.data.movies
-
-						});
-
-					})
-		},
+		 componentDidMount: function() {
+		    var _this = this;
+                this.serverRequest =
+                    axios
+                        .get("/movies.json")
+                        .then(function(result) {
+                           _this.setState({
+                                movies: result.data
+                               });
+                            })
+         },
 		componentWillUnmount: function () {
 			this.serverRequest.abort();
 		},
@@ -47,7 +46,7 @@
 									<a href={movie.Path}>
 										<img src={movie.Poster}></img>
 									</a>
-									<h3>{movie.Title}></h3>
+									<h3>{movie.Title}</h3>
 									<h4>{movie.Plot}</h4>
 									<p>{movie.Actors}</p>
 									<p>{movie.Director}</p>
@@ -59,7 +58,7 @@
 			)
 		}
 	});
-	ReactDOM.render(<Movie source="movies"/>, document.getElementById('content'));
+	ReactDOM.render(<Movie source="/movies.json"/>, document.querySelector("#content"));
 </script>
 </body>
 </html>
