some css styling and refactoring

--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -14,13 +14,17 @@
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
-    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="/css/general.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans: 400,300" rel="stylesheet">
-
+	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<section class="home">
+	<h1 class="limon">Limon</h1>
+	<img src="assets/lemon.png"/>
+</section>
 <h2 class="available">VIDEOS AVAILABLE</h2>
 <div id="content"></div>
 <script type="text/babel" src="/movieRenderer.js"></script>
