--- a/src/main/resources/frontend/watch.html
+++ b/src/main/resources/frontend/watch.html
@@ -4,9 +4,19 @@
     <link rel="stylesheet" href="css/general.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="../main.js"></script>
+
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
+<section class="watch">
+    <a href="/">
+        <img src="assets/lemon.png"/>
+        <h2 class="return">take me home</h2>
+    </a>
+
+</section>
 <div id="video">
     <video id="vid" class="video-js vjs-default-skin" width="640px" height="300px"
            controls preload="none" data-setup='{ "aspectRatio":"640:300", "playbackRates": [1, 1.5, 2] }'>
