--- a/src/main/resources/frontend/watch.html
+++ b/src/main/resources/frontend/watch.html
@@ -1,9 +1,18 @@
+
+<!DOCTYPE html>
+<html>
 <head>
-    <link href="http://vjs.zencdn.net/5.11.9/video-js.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans: 400,300" rel="stylesheet">
-    <link rel="stylesheet" href="css/general.css">
+    <meta charset="utf-8" />
+    <title>Watch a movie!</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="../main.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="http://vjs.zencdn.net/5.11.9/video.js"></script>
+
+
+
+    <link rel="stylesheet" href="css/general.css">
+    <link href="http://vjs.zencdn.net/5.11.9/video-js.css" rel="stylesheet">
 
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
@@ -15,13 +24,16 @@
         <img src="assets/lemon.png"/>
         <h2 class="return">take me home</h2>
     </a>
-
 </section>
+
 <div id="video">
-    <video id="vid" class="video-js vjs-default-skin" width="640px" height="300px"
-           controls preload="none" data-setup='{ "aspectRatio":"640:300", "playbackRates": [1, 1.5, 2] }'>
+    <video id="my_video" class="video-js vjs-default-skin vjs-big-play-centered" width="640px" height="400px"
+           controls preload="none" data-setup='{ "aspectRatio":"640:400", "playbackRates": [1, 1.5, 2] }'>
     </video>
 </div>
+<script src="http://vjs.zencdn.net/5.11.9/video.js"></script>
+<script src="/main.js"></script>
 </body>
+</html>
 
 
